# Campus-Idle-Items-Trading-System

./: CMakeLists.txt  LICENSE  README.md
config/: application.yml  database.sql
src/: main.cpp
src/config/: AppConfig.h
src/controllers/: AddressController.h  AdminController.h  FavoriteController.h  FileController.h  IdleItemController.h  MessageController.h  OrderAddressController.h  OrderController.h  UserController.h
src/dao/: AddressDao.h  AdminDao.h  FavoriteDao.h  IdleItemDao.h  MessageDao.h  OrderAddressDao.h  OrderDao.h  UserDao.h
src/enums/: ErrorMsg.h
src/exception/: ParamException.h
src/handler/: GlobalExceptionHandler.h
src/models/: Address.h  Admin.h  Favorite.h  IdleItem.h  Message.h  Order.h  OrderAddress.h  User.h
src/service/: AddressService.h  AdminService.h  FavoriteService.h  FileService.h  IdleItemService.h  MessageService.h  OrderAddressService.h  OrderService.h  UserService.h
src/utils/: IdFactoryUtil.h  OrderTask.h  OrderTaskHandler.cpp  OrderTaskHandler.h
src/vo/: FavoriteVo.h  IdleItemVo.h  MessageVo.h  PageVo.h  R.h
